--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=gamespace_dev_db
+DB_DATABASE=blog
 DB_USERNAME=root
-DB_PASSWORD=toor
+DB_PASSWORD=ostap666
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
